--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Platzi Video</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="home-container"></div>
+  <div id="modal-container"></div>
   <script src="http://localhost:9000/js/home.js"></script>
 </body>
 </html>
